logfile
[20/Sep/2017 19:25:38] WARNING [django.request:143] Not Found: /favicon.ico
[20/Sep/2017 19:27:38] WARNING [django.request:99] Forbidden (CSRF token missing or incorrect.): /login
[20/Sep/2017 20:48:09] ERROR [django.request:231] Internal Server Error: /Two_pt_MCR_Characterize
Traceback (most recent call last):
  File "/home/NANOMINE/anaconda2/lib/python2.7/site-packages/django/core/handlers/base.py", line 87, in get_response
    response = middleware_method(request)
  File "/home/NANOMINE/anaconda2/lib/python2.7/site-packages/django/middleware/common.py", line 72, in process_request
    if (not urlresolvers.is_valid_path(request.path_info, urlconf) and
  File "/home/NANOMINE/anaconda2/lib/python2.7/site-packages/django/core/urlresolvers.py", line 614, in is_valid_path
    resolve(path, urlconf)
  File "/home/NANOMINE/anaconda2/lib/python2.7/site-packages/django/core/urlresolvers.py", line 489, in resolve
    return get_resolver(urlconf).resolve(path)
  File "/home/NANOMINE/anaconda2/lib/python2.7/site-packages/django/core/urlresolvers.py", line 340, in resolve
    sub_match = pattern.resolve(new_path)
  File "/home/NANOMINE/anaconda2/lib/python2.7/site-packages/django/core/urlresolvers.py", line 224, in resolve
    return ResolverMatch(self.callback, args, kwargs, self.name)
  File "/home/NANOMINE/anaconda2/lib/python2.7/site-packages/django/core/urlresolvers.py", line 231, in callback
    self._callback = get_callable(self._callback_str)
  File "/home/NANOMINE/anaconda2/lib/python2.7/site-packages/django/utils/lru_cache.py", line 101, in wrapper
    result = user_function(*args, **kwds)
  File "/home/NANOMINE/anaconda2/lib/python2.7/site-packages/django/core/urlresolvers.py", line 97, in get_callable
    mod = import_module(mod_name)
  File "/home/NANOMINE/anaconda2/lib/python2.7/importlib/__init__.py", line 37, in import_module
    __import__(name)
  File "/home/NANOMINE/Develop/mdcs/Two_pt_MCR/views.py", line 140
    os.system('matlab -nodesktop -nodisplay -nosplash -r "cd /home/NANOMINE/Develop/mdcs/Two_pt_MCR/mfiles;Characterize("'+str(user_name)+'",'"+str(input_type)+'",'"+str(correlation_choice)+'");exit"')
                                                                                                                                                                                                        ^
SyntaxError: EOL while scanning string literal
[20/Sep/2017 20:49:34] ERROR [django.request:231] Internal Server Error: /Two_pt_MCR_Characterize
Traceback (most recent call last):
  File "/home/NANOMINE/anaconda2/lib/python2.7/site-packages/django/core/handlers/base.py", line 111, in get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
  File "/home/NANOMINE/Develop/mdcs/Two_pt_MCR/views.py", line 138, in Characterize
    print matlab_input
NameError: global name 'matlab_input' is not defined
[20/Sep/2017 21:31:51] WARNING [django.request:143] Not Found: /favicon.ico
